--- a/test3.html
+++ b/test3.html
@@ -4,7 +4,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>test3</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/test3.css" />
 </head>
 
