--- a/test5.html
+++ b/test5.html
@@ -28,7 +28,21 @@
                         </div>
                 </div>
             </div>
-            <div class="information"></div>
+
+            <div class="information">
+                <div class="row1">
+                        <h1>专业技能</h1>
+                </div>
+                <div class="row">
+                    <span class="xx-icon"></span>住家
+                    <span class="sl"></span>
+                    <span class="xx-icon"></span>不含餐</div>
+                <div class="row"><span class="hs">从业年限</span>0~3年</div>
+                <div class="row"><span class="hs">工作时间</span>全天</div>
+                <div class="row"><span class="hs">服务介绍</span><span class="redspan">25元/小时</span></div>
+                <div class="row row6"><span class="hh">自我介绍<span class="sx"></span></span><span class="zwjs">可以洗衣、做饭、照顾老人。在护工方面有五年经验，经验丰富</div>
+                
+            </div>
         </div>
 
         <div class="footer">
