--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="screen">111</div>
     <script src="js/demo.js"></script>
 </body>
 </html>
