--- a/test5.html
+++ b/test5.html
@@ -40,7 +40,7 @@
                 <div class="row"><span class="hs">从业年限</span>0~3年</div>
                 <div class="row"><span class="hs">工作时间</span>全天</div>
                 <div class="row"><span class="hs">服务介绍</span><span class="redspan">25元/小时</span></div>
-                <div class="row row6"><span class="hh">自我介绍<span class="sx"></span></span><span class="zwjs">可以洗衣、做饭、照顾老人。在护工方面有五年经验，经验丰富</div>
+                <div class="row row6"><div class="hh"><span class="hs">自我介绍</span></div><span class="zwjs">可以洗衣、做饭、照顾老人。在护工方面有五年经验，经验丰富</div>
                 
             </div>
         </div>
