--- a/css_task3/test3.html
+++ b/css_task3/test3.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <title>test3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/test3.css" />
+    <link rel="stylesheet" href="test3.css" />
 </head>
 
 <body>
     <div class="wrap">
         <div class="backBtn"></div>
         <h2>
-            <img src="images/task3_07.png" alt="logo" />
+            <img src="../images/task3_07.png" alt="logo" />
         </h2>
         <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主。</p>
         <div class="footer">
