--- a/css_task4/test4.html
+++ b/css_task4/test4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/test4.css">
+    <link rel="stylesheet" href="test4.css">
     <title>css任务四</title>
 </head>
 <body>
