--- a/css_task7/index.html
+++ b/css_task7/index.html
@@ -20,14 +20,14 @@
         </header>
 
         <main class="row">
-            <div class="top col-12">
+            <div class="top col-12" onclick="window.open('./vote.html')">
                 <span>上次游戏: 捉鬼猜词版</span>
                 <div class="back-btn"></div>
             </div>
             <div class="versions col-12">
                 <h2>捉鬼游戏</h2>
 
-                <div class="version">简化版</div>
+                <div class="version" onclick="window.open('./vote.html')">简化版</div>
                 <span>有1133个用户正在玩此款游戏</span>
 
                 <div class="version">猜词版</div>
