--- a/css_task7/result.html
+++ b/css_task7/result.html
@@ -93,7 +93,7 @@
         </main>
         <footer class="row">
             <div class="col">
-                <button>再来一局</button>
+                <button onclick="window.open('./index.html')">再来一局</button>
             </div>
             <div class="col">
                 <button>上传并分享</button>
