--- a/css_task7/index.html
+++ b/css_task7/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <header class="row">
             <div class="nav-btn">
                 <button class="hamburgerBtn"><span>menu</span></button>
