--- a/css_task8and9/profession.html
+++ b/css_task8and9/profession.html
@@ -21,20 +21,25 @@
 	<header class="m-hd">
 		<div class="container">
 			<div class="top row">
-				<div class="telNum">
-					<span>客服热线：010-000-00000</span>
+				<div class="col-7">
+					<div class="telNum">
+						<span>客服热线：010-000-00000</span>
+					</div>
 				</div>
-				<div class="shareLink f-fr">
-					<a href="javascript:">
-						<span class="icon" id="share-weixin-img"></span>
-					</a>
-					<a href="javascript:">
-						<span class="icon" id="share-qq-img"></span>
-					</a>
-					<a href="javascript:">
-						<span class="icon" id="share-weibo-img"></span>
-					</a>
+				<div class="col-5">
+					<div class="shareLink f-fr">
+						<a href="javascript:">
+							<span class="icon" id="share-weixin-img"></span>
+						</a>
+						<a href="javascript:">
+							<span class="icon" id="share-qq-img"></span>
+						</a>
+						<a href="javascript:">
+							<span class="icon" id="share-weibo-img"></span>
+						</a>
+					</div>
 				</div>
+
 			</div>
 
 		</div>
@@ -789,12 +794,11 @@
 		</div>
 		</div>
 	</main>
-
 	<footer class="m-ft">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-12">
-					<div class="m-help m-l">
+					<div class="m-help">
 						<p>技能树——改变你我</p>
 						<p>
 							<a href="#">关于我们</a>
