--- a/css_task8and9/index.html
+++ b/css_task8and9/index.html
@@ -15,20 +15,25 @@
 	<header class="m-hd">
 		<div class="container">
 			<div class="top row">
-				<div class="telNum">
-					<span>客服热线：010-000-00000</span>
+				<div class="col-7">
+					<div class="telNum">
+						<span>客服热线：010-000-00000</span>
+					</div>
 				</div>
-				<div class="shareLink f-fr">
-					<a href="javascript:">
-						<span class="icon" id="share-weixin-img"></span>
-					</a>
-					<a href="javascript:">
-						<span class="icon" id="share-qq-img"></span>
-					</a>
-					<a href="javascript:">
-						<span class="icon" id="share-weibo-img"></span>
-					</a>
+				<div class="col-5">
+					<div class="shareLink f-fr">
+						<a href="javascript:">
+							<span class="icon" id="share-weixin-img"></span>
+						</a>
+						<a href="javascript:">
+							<span class="icon" id="share-qq-img"></span>
+						</a>
+						<a href="javascript:">
+							<span class="icon" id="share-weibo-img"></span>
+						</a>
+					</div>
 				</div>
+
 			</div>
 
 		</div>
@@ -47,7 +52,7 @@
 							<div class="list collapse navbar-collapse" id="navbarNav">
 								<ul class="navbar-nav">
 									<li class="nav-item active">
-										<a class="" href="#">首页</a>
+										<a class="" href="index.html">首页</a>
 									</li>
 									<li class="nav-item">
 										<a class="" href="profession.html">职业</a>
@@ -253,65 +258,125 @@
 			<div class="container">
 				<h2 class="col-md-12">友情链接</h2>
 				<ul class="row">
-					<li class="col-1-10 col-sm-2 col-4 ">
-						<a href="#">手机软件</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">教师招聘</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">找工作</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">手机软件</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">教师招聘</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">找工作</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">手机软件</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">教师招聘</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">找工作</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4 ">
-						<a href="#">教师招聘</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4 col-lg-offset-1">
-						<a href="#">手机软件</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">教师招聘</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">找工作</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">手机软件</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">教师招聘</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">找工作</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">手机软件</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">教师招聘</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">找工作</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
-					<li class="col-1-10 col-sm-2 col-4">
-						<a href="#">教师招聘</a>
+					<li class="col d-flex">
+						<div>
+							<span class="disc"></span>
+							<a href="#">手机软件</a>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -322,7 +387,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-12">
-					<div class="m-help m-l">
+					<div class="m-help">
 						<p>技能树——改变你我</p>
 						<p>
 							<a href="#">关于我们</a>
