--- a/css_task8and9/recommend.html
+++ b/css_task8and9/recommend.html
@@ -17,20 +17,25 @@
 		<header class="m-hd">
 			<div class="container">
 				<div class="top row">
-					<div class="telNum">
-						<span>客服热线：010-000-00000</span>
+					<div class="col-7">
+						<div class="telNum">
+							<span>客服热线：010-000-00000</span>
+						</div>
 					</div>
-					<div class="shareLink f-fr">
-						<a href="javascript:">
-							<span class="icon" id="share-weixin-img"></span>
-						</a>
-						<a href="javascript:">
-							<span class="icon" id="share-qq-img"></span>
-						</a>
-						<a href="javascript:">
-							<span class="icon" id="share-weibo-img"></span>
-						</a>
+					<div class="col-5">
+						<div class="shareLink f-fr">
+							<a href="javascript:">
+								<span class="icon" id="share-weixin-img"></span>
+							</a>
+							<a href="javascript:">
+								<span class="icon" id="share-qq-img"></span>
+							</a>
+							<a href="javascript:">
+								<span class="icon" id="share-weibo-img"></span>
+							</a>
+						</div>
 					</div>
+
 				</div>
 
 			</div>
@@ -48,14 +53,14 @@
 								</button>
 								<div class="list collapse navbar-collapse" id="navbarNav">
 									<ul class="navbar-nav">
-										<li class="nav-item">
+										<li class="nav-item ">
 											<a class="" href="index.html">首页</a>
 										</li>
 										<li class="nav-item">
 											<a class="" href="profession.html">职业</a>
 										</li>
 										<li class="nav-item active">
-											<a class="" href="#">推荐</a>
+											<a class="" href="recommend.html">推荐</a>
 										</li>
 										<li class="nav-item">
 											<a class="" href="#">关于</a>
@@ -177,7 +182,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-12">
-						<div class="m-help m-l">
+						<div class="m-help">
 							<p>技能树——改变你我</p>
 							<p>
 								<a href="#">关于我们</a>
