--- a/css_task12/task6.html
+++ b/css_task12/task6.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>护工页面</title>
-    <link rel="stylesheet" href="css/task6.css">
+    <link rel="stylesheet" href="./css/task6.css">
 
 </head>
 
@@ -17,8 +17,8 @@
         <header class="m-hd">
 
             <div class="toggleBtn">
-                <div class="guzhuBtn">找雇主</div>
-                <div class="hugongBtn">找护工</div>
+                <button class="u-btn guzhuBtn">找雇主</button>
+                <button class="u-btn hugongBtn">找护工</button>
 
             </div>
 
@@ -26,59 +26,11 @@
         </header>
 
         <nav class="m-nav">
-            <div class="btn-group col-xs-4 nav-col">
-                <button class="btn btn-default  dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    所在地
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="btn-group col-xs-4 nav-col">
-                <button class="btn btn-default  dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    食宿
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="btn-group col-xs-4 nav-col">
-                <button class="btn btn-default  dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    病人情况
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                </ul>
-            </div>
+            <select class="u-select" name="" id="">
+                <option value="">1</option>
+                <option value="">1</option>
+                <option value="">1</option>
+            </select>
 
 
         </nav>
@@ -229,12 +181,12 @@
 
         <footer class="m-ft">
 
-            <div class="home col-xs-6">
+            <div class="u-icon home">
                 <span></span>
                 <p>首页</p>
             </div>
 
-            <div class="myself col-xs-6">
+            <div class="u-icon myself">
                 <span></span>
                 <p>我的</p>
             </div>
