--- a/css_task12/task6.html
+++ b/css_task12/task6.html
@@ -25,14 +25,40 @@
             <div class="location"></div>
         </header>
 
-        <nav class="m-nav">
-            <select class="u-select" name="" id="">
-                <option value="">1</option>
-                <option value="">1</option>
-                <option value="">1</option>
-            </select>
-
-
+        <nav class="g-nav">
+            <div class="m-selectBox">
+                <div class="select">
+                    <span>所在地</span>
+                    <div class="select-triangle"></div>
+                </div>
+                <ul class="subBox">
+                    <li>1</li>
+                    <li>1</li>
+                    <li>1</li>
+                </ul>
+            </div>
+            <div class="m-selectBox">
+                <div class="select">
+                    <span>食宿</span>
+                    <div class="select-triangle"></div>
+                </div>
+                <ul class="subBox">
+                    <li>1</li>
+                    <li>1</li>
+                    <li>1</li>
+                </ul>
+            </div>
+            <div class="m-selectBox">
+                <div class="select">
+                    <span>病人情况</span>
+                    <div class="select-triangle"></div>
+                </div>
+                <ul class="subBox">
+                    <li>1</li>
+                    <li>1</li>
+                    <li>1</li>
+                </ul>
+            </div>
         </nav>
 
 
@@ -196,7 +222,60 @@
             </div>
         </footer>
     </div>
+    <script>
+        /**
+         * 1.模拟下拉框
+         */
 
+        //创建Select对象创建函数
+        //参数elAry代表所要模拟的对象集合
+        var Select = function (elAry) {
+            this.elAry = elAry;
+        };
+
+        //初始化所有功能
+        Select.prototype.init = function () {
+
+            var self = this;
+            Array.prototype.forEach.call(self.elAry, function (item) { //遍历对象集合 
+                var select = item.querySelector(".select");
+                var subBox = item.querySelector(".subBox");
+
+                //实现点击下拉效果，再次点击隐藏，点击其他地方也会隐藏下拉列表。
+                select.onclick = function (e) {
+                    var computedStyle = document.defaultView.getComputedStyle(subBox, null);
+                    if (computedStyle.display === "none") {
+                        subBox.style.display = "block";
+                    } else {
+                        subBox.style.display = "none";
+                    }
+                    e.stopPropagation(); //阻止冒泡
+                };
+                document.onclick = function () {
+                    subBox.style.display = "none";
+                }
+
+                //绑定下拉列表hover的效果
+                var list = subBox.querySelectorAll("li");
+                Array.prototype.forEach.call(list, function (item) {
+                    item.onmouseover = function () {
+                        item.style.backgroundColor = "red";
+                    };
+                    item.onmouseout = function () {
+                        item.style.backgroundColor = "#fff";
+                    };
+                });
+            });
+
+
+
+        };
+
+        var selectAry = document.querySelectorAll(".m-selectBox");
+        //实例化一个select
+        var select = new Select(selectAry);
+        select.init();
+    </script>
 
 
 </body>
