--- a/js_task2/index.html
+++ b/js_task2/index.html
@@ -6,34 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="../css_task7/css/index.css">
+
+    <link rel="stylesheet" href="../css_task13/css/index.css">
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header class="row">
+    <div class="g-wrap">
+        <header class="m-hd">
             <div class="nav-btn">
                 <button class="hamburgerBtn"><span>menu</span></button>
             </div>
         </header>
 
-        <main class="row">
-            <div class="top col-12" onclick="window.location.href='install.html'">
-                <span>上次游戏: 捉鬼猜词版</span>
+        <main class="m-mn">
+            <div class="top" onclick="window.open('./vote.html')">
+                <span>点击按钮开始游戏</span>
                 <div class="back-btn"></div>
             </div>
-            <div class="versions col-12">
-                <h2>捉鬼游戏</h2>
+            <div class="versions">
+                <h2>杀人游戏</h2>
 
-                <div class="version" onclick="window.location.href='install.html'">简化版</div>
+                <div class="version" onclick="window.location.href='./install.html' ">简化版</div>
                 <span>有1133个用户正在玩此款游戏</span>
 
-                <div class="version">猜词版</div>
+                <div class="version">警版</div>
                 <span>有1133个用户正在玩此款游戏</span>
 
-                <div class="version">白痴版</div>
+                <div class="version">3.0版</div>
                 <span>有1133个用户正在玩此款游戏</span>
                 <div class="circles">
                     <div class="circle now"></div>
@@ -41,18 +40,13 @@
                     <div class="circle"></div>
                     <div class="circle"></div>
                 </div>
-                <div class="triangle-btn" onclick="window.location.href='install.html';"></div>
+                <div class="triangle-btn" onclick="document.location='vote.html';"></div>
             </div>
 
         </main>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
