--- a/js_task2/install.html
+++ b/js_task2/install.html
@@ -13,7 +13,7 @@
     <div class="g-wrap">
         <header class="g-head">
             <div class="m-hd">
-                <div class="back-btn"></div>
+                <div class="back-btn" onclick="window.location.href='./index.html' "></div>
                 <h1>参数设置</h1>
             </div>
 
