--- a/js_task3/judge.html
+++ b/js_task3/judge.html
@@ -6,12 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>法官日记</title>
+    <link rel="stylesheet" href="./css/judge.css">
 </head>
 
 <body>
+    <div class="g-wrap">
+        <header class="g-hd">
+            <div class="m-hd">
+                <div class="backBtn" onclick="window.location.href='./checkStatus.html'"></div>
+                <div class="closeBtn"></div>
+                <h1>法官日记</h1>
+            </div>
+        </header>
+        <main class="g-mn">
+            <div class="box-wrap">
+                
 
-    <script>
-        document.write(sessionStorage.arys);
+            </div>
+
+        </main>
+        <footer class="g-ft">
+            <div class="m-btn">开始游戏</div>
+        </footer>
+    </div>
+    <script src="./js/judge.js">
+        // document.write(sessionStorage.arys);
     </script>
 </body>
 
